--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Font & Estilo -->
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="/src/style.css" />
+  <link rel="shortcut icon" href="/images/logo/favicon.svg" type="image/icon/HeinSoft">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -32,7 +33,6 @@
           <li class="nav-item"><a class="nav-link" href="#portfolio">Serviços</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
         </ul>
-        <a href="#get-started" class="btn btn-primary ms-lg-3">Entre em Contato</a>
       </div>
     </nav>
   </header>
@@ -43,7 +43,7 @@
     <section class="hero text-center py-5" id="home">
       <div class="container">
         <h1 class="display-4">Cada detalhe é projetado!</h1>
-        <p class="lead">Criamos experiências únicas com atenção aos mínimos detalhes.</p>
+        <p class="lead">Criando experiências únicas com atenção aos mínimos detalhes.</p>
         <div class="d-flex justify-content-center gap-3 flex-wrap mt-4">
           <a href="#learn-more" class="btn btn-primary btn-lg">Learn More</a>
           <a href="#demo" class="btn btn-outline-secondary btn-lg">See Demo</a>
@@ -55,10 +55,10 @@
     <section id="about" class="bg-light py-5 text-center">
       <div class="container">
         <h3 class="text-muted">Especialista em criar websites</h3>
-        <h1 class="mb-3">Empowering your digital journey</h1>
-        <p class="mb-4">Discover our work</p>
+        <h1 class="mb-3">Empoderando seu posicionamento no digital!</h1>
+        <p class="mb-4">Descubra nossos trabalhos 😄</p>
         <div class="mockup-container mx-auto">
-          <img src="https://placehold.co/800x500" alt="Website mockup" class="img-fluid rounded shadow" />
+          <img src="/images/About/Template Sobre.png" alt="Website mockup" class="img-fluid rounded shadow" />
         </div>
       </div>
     </section>
@@ -66,33 +66,31 @@
     <!-- Portfólio -->
     <section id="portfolio" class="py-5">
       <div class="container">
+        <h1 class="d-flex justify-content-center align-items-center">Serviços</h1>
         <div class="row g-4">
           <div class="col-md-4">
             <div class="portfolio-card text-center">
               <div class="card-image">
-                <img src="images/custom-design.jpg" alt="Custom Design" />
+                <img src="/images/Services/Briefing Image.png" alt="Custom Design" />
               </div>
-              <h4>Custom Design</h4>
+              <h4>Briefing e Planejamento personalizado</h4>
             </div>
           </div>
           <div class="col-md-4">
             <div class="portfolio-card text-center">
               <div class="card-image">
-                <img src="images/responsive-site.jpg" alt="Responsive Site" />
+                <img src="/images/Services/Desenvolvimento Image.png" alt="Responsive Site" />
               </div>
-              <h4>Responsive Site</h4>
+              <h4>Desenvolvimento e Testes de otimização</h4>
             </div>
           </div>
           <div class="col-md-4">
             <div class="portfolio-card text-center">
               <div class="card-image">
-                <img src="images/optimization-tests.jpg" alt="Optimization Tests" />
+                <img src="/images/Services/Entrega Image.png" alt="Optimization Tests" />
               </div>
-              <h4>Optimization Tests</h4>
+              <h4>Entrega documentada e Planos de suporte</h4>
             </div>
-          </div>
-          <div class="col-12 text-center">
-            <button class="quote-button mt-3">Peça um orçamento</button>
           </div>
         </div>
       </div>
@@ -101,7 +99,7 @@
     <!-- Contato -->
     <section id="contact" class="contact-section py-5 bg-light">
       <div class="container">
-        <h2 class="text-center mb-3">Whatsapp</h2>
+        <h2 class="text-center mb-3">Contate-nos</h2>
         <p class="text-center mb-4">Preencha o formulário abaixo para falar com a gente.</p>
         <form id="contact-form" class="row g-3 mx-auto" method="POST" style="max-width:600px;">
           <div class="col-12">
@@ -127,12 +125,12 @@
   <!-- Rodapé -->
   <footer class="bg-dark text-light text-center py-4">
     <div class="container">
-      <p class="mb-0">&copy; 2025 HeinSoft Company. Todos os direitos reservados. Desenvolvido por <a href="#" class="text-light text-decoration-none">HeinSoft</a></p>
+      <p class="mb-0" style="color: #fff;">&copy; 2025 HeinSoft Company. Todos os direitos reservados. Desenvolvido por <a href="#" class="text-light text-decoration-none">HeinSoft</a></p>
     </div>
   </footer>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/main.js"></script>
+  <script src="/src/main.js"></script>
 </body>
 </html>
